--- a/Practica-09-03-18/index.html
+++ b/Practica-09-03-18/index.html
@@ -3,6 +3,14 @@
 		<title> Diseño Responsivo</title>
 		<meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 		<link rel="stylesheet" href="styles.css">
+
+		<script type="text/javascript">
+			document.addEventListener('load', function () {
+				var element = document.getElementById('menu');
+				console.log(element);
+				element.addEventListener('click', function () { alert('Perro'); });
+			});
+		</script>
 	</head>
 
 	<body>
@@ -14,11 +22,11 @@
 				<li><a href="acerca.html">Acerca de</a></li>
 			</ul>
 		</div>
-		<div class="navigation2">
+		<div class="navigation2" id="menu">
 			Menu
 		</div>
-		<div class="navigation3">
-			<ul class="menu">
+		<div class="navigation3" id="lista">
+			<ul>
 				<li><a href="/">Inicio</a></li>
 				<li><a href="mobilefirst.html">Mobile First</a></li>
 				<li><a href="acerca.html">Acerca de</a></li>
