--- a/ejemplo-13-03-18.html
+++ b/ejemplo-13-03-18.html
@@ -5,6 +5,77 @@
     <title>Web SQL</title>
   </head>
   <body>
+  <div id="content">
+    <p id="log">
+    </p>
 
+    <script type="text/javascript">
+      document.getElementById('content').innerHTML =
+      '<h4>Base de datos</h4>'+'<ul id="results"></ul>'+
+      '<button onclick="newRecord()"></button>'+
+      '<button onclick="createTable()"></button>'+
+      '<button onclick="dropTable()"></button>';
+
+      var db;
+      var log = document.getElementById('log');
+      bd = openDataBase("DBTest","1.0","DB Ejemplo",200000);
+      showRecord();
+      document.getElementById('results').addEventListener('click', function(e) {
+        e.preventDefault();
+      }),false;
+
+      function onError(tx,error) {
+        log.innerHTML += '<p>' + error.message + '</p>';
+      }
+
+      function showRecord() {
+        document.getElementById('results').innerHTML = '';
+        db.transaction(function(tx) {
+          tx.executeSql("SELECT * FROM tabla1",[],function(tx,result) {
+            for (var i = 0,item=null; i < result.rows.length; i++) {
+              item = result.rows.item(i);
+              document.getElementById('results').innerHTML +=
+              '<li><span contenteditable="true" onkeyup="updateRecord('+item['id']+',this)">'+
+              item['text'] + '</span> <a href="#" onclick="deleteRecord('+item['id']+')">x</a></li>';
+            }
+          });
+        });
+      }
+
+      function createTable() {
+        bd.transaction(function(tx) {
+          tx.executeSql("CREATE TABLE tabla1(id REAL UNIQUE, text TEXT)",[],function(tx) {
+            log.innerHTML = 'Tabla creada';
+          },onError);
+        });
+      }
+
+      function newRecord() {
+        var num = Math.round(Math.random() * 10000);
+        db.transaction(function(tx) {
+          tx.executeSql("INSERT INTO tabla1(id,text) VALUES (?,?)", [num,'Texto en la tabla...'],
+          function(tx,result) {
+            log.innerHTML = 'registro añadido';
+            showRecord();
+          },onError);
+        });
+      }
+
+      function updateRecord(id, textE1) {
+        db.transaction(function(tx) {
+          tx.executeSql("UPDATE tabla1 SET text = ? WHERE id = ?",[textE1.innerHTML,id],null,onError);
+        });
+      }
+
+      function deleteRecord(id) {
+        db.transaction(function(tx) {
+          tx.executeSql("DELETE FROM tabla1 WHERE id=?",[id],
+          function(tx,result) {
+            showRecord();
+          },onError);
+        });
+      }
+    </script>
+  </div>
   </body>
 </html>
