--- a/Proyecto avance/selecciona.html
+++ b/Proyecto avance/selecciona.html
@@ -5,14 +5,24 @@
 	<h1 id="results"></h1>
 
 	<h3>Escoja el tamaño del memorama</h3>
-	<form action="memorama4x4.html">
+	<form action="memorama4x4.html" method="get">
+		<select name="tema">
+			<option value="1">Figuras 1</option>
+			<option value="2">Figuras 2</option>
+			<option value="3">Figuras 3</option>
+		</select>
 		<p><input type="submit" value="Memorama 4 x 4" /></p>
 	</form>
-	<form action="memorama4x5.html">
+	<form action="memorama4x5.html" method="get">
+		<select name="tema">
+			<option value="1">Figuras 1</option>
+			<option value="2">Figuras 2</option>
+			<option value="3">Figuras 3</option>
+		</select>
 		<p><input type="submit" value="Memorama 4 x 5" /></p>
 	</form>
 
 	<script src="js/selecciona.js"></script>
-	
+
 </body>
 </html>
