--- a/Proyecto avance/selecciona.html
+++ b/Proyecto avance/selecciona.html
@@ -5,21 +5,19 @@
 	<h1 id="results"></h1>
 
 	<h3>Escoja el tamaño del memorama</h3>
-	<form action="memorama4x4.html" method="get">
+	<form action="memorama.html" method="get">
+		<label>Tema</label>
 		<select name="tema">
 			<option value="1">Figuras 1</option>
 			<option value="2">Figuras 2</option>
 			<option value="3">Figuras 3</option>
+		</select><br><br>
+		<label>Tamaño</label>
+		<select name="tamanio">
+			<option value="1">4x4</option>
+			<option value="2">4x5</option>
 		</select>
-		<p><input type="submit" value="Memorama 4 x 4" /></p>
-	</form>
-	<form action="memorama4x5.html" method="get">
-		<select name="tema">
-			<option value="1">Figuras 1</option>
-			<option value="2">Figuras 2</option>
-			<option value="3">Figuras 3</option>
-		</select>
-		<p><input type="submit" value="Memorama 4 x 5" /></p>
+		<p><input type="submit" value="Aceptar" /></p>
 	</form>
 
 	<script src="js/selecciona.js"></script>
