Salida de clase

--- a/Practica-JQMobile-1/prueba.html
+++ b/Practica-JQMobile-1/prueba.html
@@ -16,10 +16,24 @@
 
       <div id="content" data-role="content">
         <p>Contenido de la aplicaci&oacute;n</p>
+        <a href="#pag2">Ir a pagina 2</a>
       </div>
 
       <div data-role="footer">
         <h4>Footer de la aplicaci&oacute;n</h4>
+      </div>
+    </div>
+    <div id="pag2" data-role="page">
+      <div data-role="header">
+        <h1>Encabezado</h1>
+      </div>
+
+      <div id="content" data-role="content">
+        <p>Contenido de la aplicaci&oacute;n 2</p>
+      </div>
+
+      <div data-role="footer">
+        <h4>Footer de la aplicaci&oacute;n 2</h4>
       </div>
     </div>
   </body>
